public/css/index.css
/* ... */
.subsectionline {
    height: .5px;
    border-bottom: 2px solid black;
    padding-top: 1px;
    font-weight: lighter;
}

#subsection-title {
    padding-bottom: 5px !important;
    margin: 0 !important;
    font-weight: lighter;
}

h2 {
    margin-top: 20px !important;
    margin-bottom: 20px !important;
    font-family: 'SourceSansPro';
    font-size: 30px;
}

#first-subsection {
    padding-top: 30px !important;
}


/* Style the list */

ul.breadcrumb {
    list-style: none;
    background-color: white;
    padding-left: 0px;
    padding-top: 0px;
    padding-bottom: 0px;
    padding-right: 0px;
    margin: 0;
}

#homebreadcrumb {
    padding-left: 0px !important;
}


/* Display list items side by side */

ul.breadcrumb li {
    display: inline;
    font-size: 12px;
}


/* Add a slash symbol (/) before/behind each list item */

ul.breadcrumb li+li:before {
    padding: 6px;
    color: black;
    content: "/\00a0";
}


/* Add a color to all links inside the list */

ul.breadcrumb li a {
    color: black;
    text-decoration: none;
    padding-left: 1px !important;
    padding-right: 1px !important;
}


/* Add a color on mouse-over */

ul.breadcrumb li a:hover {
    color: #01447e;
}


/* Set a specific color for each brand */


/* Facebook */

.socialmediaicons .fa-facebook {
    background: #3B5998;
    color: white;
}


/* Twitter */

.socialmediaicons .fa-twitter {
    background: #55ACEE;
    color: white;
}

.socialbtns, .socialbtns ul, .socialbtns li {
    margin: 0;
    padding: 10px;
    text-align: center;
}

.socialbtns li {
    list-style: none outside none !important;
    display: inline-block !important;
}

a.twitter, a.facebook, a.instagram {
    padding: 0px !important;
}

.socialbtns .fa {
    width: 40px;
    height: 40px;
    color: #000;
    background-color: #FFF;
    border: 1px solid #000;
    padding-top: 12px;
    border-radius: 22px;
    -moz-border-radius: 22px;
    -webkit-border-radius: 22px;
    -o-border-radius: 22px;
}

.socialbtns .fa:hover {
    color: #FFF;
    /*background-color: #000; */
    border: 1px solid #000;
}

i.fa.fa-lg.fa-facebook:hover {
    background-color: #0077e2;
    border-color: #0077e2;
}

i.fa.fa-lg.fa-twitter:hover {
    background-color: #00aced;
    border-color: #00aced;
}

i.fa.fa-lg.fa-instagram:hover {
    background-color: #9e6f4f;
    border-color: #9e6f4f;
}


/* shows hamburger on mobile https://codepen.io/crushoftheyear/pen/redJdy */

@media screen and (max-width:766px) {
    body ul li {
        list-style-type: none;
    }
    .nav {
        background-color: #1e73be;
        width: 100%;
        position: fixed;
        z-index: 10;
        height: 60px;
    }
    ul#menu {
        display: none;
        padding: 0;
        background-color: #e4e2e0;
        opacity: 70%;
    }
    .scroll {
        overflow: auto;
        max-height: 667px;
    }
    .padding {
        padding: 5px;
    }
    ul#menu li a {
        width: 100%;
        display: block;
        background-color: #e4e2e0;
        color: black;
        font-size: 1.1em;
        padding: 20px;
        transition: background 0.2s;
        text-decoration: none;
        text-align: left;
        cursor: pointer;
    }
    ul#menu li {
        overflow: auto;
    }
    @media screen and (min-width: 2000px) {
        .hamburger-container {
            display: none;
        }
        .nav ul#menu {
            display: inline;
        }
        .nav ul#menu li {
            display: inline-block;
            margin-right: -5px;
        }
    }
    ul.hamburger li {
        height: 5px;
        background: white;
        content: '';
        position: relative;
        transition: .25s ease-in-out;
        width: 30px;
    }
    .hidden {
        opacity: 0;
    }
    .rot45deg {
        transform: rotate(45deg);
        top: 10px !important;
    }
    .rot-45deg {
        transform: rotate(-45deg);
    }
    ul.hamburger {
        display: block;
        position: absolute;
        top: 20px;
        left: 15px;
        padding: 0;
        margin: 0;
        height: 30px;
    }
    ul.hamburger li:nth-child(1) {
        top: 0;
    }
    ul.hamburger li:nth-child(2) {
        top: 5px;
    }
    ul.hamburger li:nth-child(3) {
        top: 10px;
    }
    .hamburger-container {
        height: 60px;
        width: 100%;
        cursor: pointer;
    }
    .slide_viewer {
        height: 200px;
    }
    .directional_nav {
        top: -125px;
    }

    .caption-mobile-text{
      font-size: 0.75em !important;
      padding: 0px;
      color: #6e6e6e;
      font-family: 'SourceSansPro', sans-serif;
      font-weight: 500;
    }

    .caption-mobile-text-title{
      font-size: 1em !important;
    }
    .author-mobile{
      font-size: 0.75em !important;
    }

    /* hide stuff on mobile */
    #navigation, .tritonlogo, #needed-padding, #header, #socialarea, .nav-wrapper-desktop, .paragraph, .paragraph-hide {
        display: none;
    }
    .formbox {
        margin: 0 auto !important;
    }
    .form-group {
        padding: 15px;
        width: 100% !important;
    }
    .btn-primary {
        padding: 15px;
    }
    #header {
        display: none;
    }
    .back-to-top {
        right: 15px !important;
    }
    #buttons {
        width: 100%;
    }
    #submit, #email2 {
        font-size: 12px;
    }
    .button {
        width: 50% !important;
    }
    .slideshow-caption1 {
        opacity: 0.85;
        width: 100%;
        background-color: black;
        top: 120px;
    }
    .slideshow-caption2 {
        opacity: 0.85;
        width: 100%;
        background-color: black;
        top: 120px;
    }
    .slideshow-caption3 {
        opacity: 0.85;
        width: 100%;
        background-color: black;
        top: 120px;
    }
    .slideshow-caption4 {
        opacity: 0.85;
        width: 100%;
        background-color: black;
        top: 120px;
    }
}
/* ... */

